# Neural-network

./: Readme.txt
CNN/: nn.py
FCNN/number/: nn.py
c++/: class.cpp  main.cpp  numcpp.cpp  utils.cpp
c++/CNN/: CMakeLists.txt  class.cpp  main.cpp  numcpp.cpp  utils.cpp
c++/CNN/src/: class.cpp  class.hpp  main.cpp  numcpp.cpp  numcpp.hpp  utils.cpp  utils.hpp
number/Relu_cpu/: nn.py  test.py
py/FCNN/number/: nn.py
py/FCNN/snake/: nn.py
snake/: nn.py
